samples/_failures_safe/1761449236_b4a9bf_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e8d3440c.c: In function ‘main’:
./samples/SAFE/__tmp_e8d3440c.c:181:16: error: missing terminating " character
  181 |         printf("Error: Invalid
      |                ^~~~~~~~~~~~~~~
./samples/SAFE/__tmp_e8d3440c.c:181:9: error: expected expression at end of input
  181 |         printf("Error: Invalid
      |         ^~~~~~
./samples/SAFE/__tmp_e8d3440c.c:181:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e8d3440c.c:181:9: error: expected declaration or statement at end of input
